# COTE

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  session_log.txt
src/: main.cpp
src/engine/: ScalingManager.cpp  ScalingManager.hpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskQueue.hpp  TaskScheduler.cpp  TaskScheduler.hpp  WorkerPool.cpp  WorkerPool.hpp
src/infrastructure/: Logger.cpp  Logger.hpp  MetricsService.cpp  MetricsService.hpp  Semaphore.cpp  Semaphore.hpp  ThreadSafePriorityQueue.hpp
src/models/: MetricsSnapshot.hpp  Task.cpp  Task.hpp  TaskState.hpp
src/presentation/: Dashboard.cpp  Dashboard.hpp  GraphBuffer.cpp  GraphBuffer.hpp
src/services/: MonitoringService.cpp  MonitoringService.hpp  TaskService.cpp  TaskService.hpp
